[package]
name = "celestia-da"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
celestia-rpc = "0.4.0"
celestia-types = "0.4.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
dotenv = "0.15"  # For managing .env configs
async-trait = "0.1.52"  # Add this line
reqwest = { version = "0.11", features = ["json"] }
base64 = "0.21" 


[[bin]]
name = "server"
path = "src/main.rs"

[[bin]]
name = "server_status"
path = "src/server_status.rs"

[[bin]]
name = "post_data"
path = "src/post_data.rs"

[[bin]]
name = "pull_data"
path = "src/pull_data.rs"

# celestia-da/
# ├── src/
# │   ├── config.rs              # Contains AdapterConfiguration struct
# │   ├── main.rs                # Actix server setup and adapter initialization
# │   ├── adapters/
# │   │   ├── mod.rs             # Exposes adapters (Celestia, EigenLayer)
# │   │   ├── traits.rs          # AdapterFunctions trait definition
# │   │   ├── celestia.rs        # CelestiaAdapter implementation
# │   │   ├── eigenlayer.rs      # EigenLayerAdapter implementation
# │   ├── routes.rs              # Actix web routes for HTTP requests
# ├── Cargo.toml                 # Project dependencies
# └── .env                       # Configs like tokens, node URLs

